@@ -9,4 +9,6 @@ extern const struct addrdesc xioaddr_pipe;
 
 extern const struct optdesc opt_f_setpipe_sz;
 
+extern int xio_chk_pipesz(int fd);
+
 #endif /* !defined(__xio_pipe_h_included) */
